[package]
name = "debounce"
version = "0.1.3"
edition = "2021"
description = "Provide good button reader"
license = "GPL v3"
authors = ["Turbo Fredriksson <turbo@bayour.com>"]
repository = "https://github.com/FransUrbo/rust-libs-debounce"
homepage = "https://github.com/FransUrbo/drive-by-wire"
categories = [
    "embedded",
    "no-std",
    "concurrency",
    "asynchronous",
]

[dependencies.embassy-time]
features = ["defmt", "defmt-timestamp-uptime"]
git = "https://github.com/embassy-rs/embassy.git"
rev = "ef01e2e"

[dependencies.embassy-rp]
features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl", "rp2040"]
git = "https://github.com/embassy-rs/embassy.git"
rev = "ef01e2e"

[profile.dev]
codegen-units = 1
debug = "full"
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = false
strip = true

[profile.release-dev]
inherits = "release"
strip = "debuginfo"

# do not optimize proc-macro crates = faster builds from scratch
[profile.dev.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

[profile.release.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
